Import of CORNELIUS/App-cpanbaker-0.02 from CPAN.
gitpan-cpan-distribution: App-cpanbaker
gitpan-cpan-version:      0.02
gitpan-cpan-path:         CORNELIUS/App-cpanbaker-0.02.tar.gz
gitpan-cpan-author:       CORNELIUS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 Revision history for Perl extension App::cpanbaker
 
+0.02    二  1/18 13:52:10 2011
+        More options. --dry , --skip-pods, --skip-manpages ..
+        Filename with OS name , date
+
 0.01    Mon Jan 17 23:26:26 2011
         - original version
