Import of CORNELIUS/App-cpanbaker-0.04 from CPAN.
gitpan-cpan-distribution: App-cpanbaker
gitpan-cpan-version:      0.04
gitpan-cpan-path:         CORNELIUS/App-cpanbaker-0.04.tar.gz
gitpan-cpan-author:       CORNELIUS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension App::cpanbaker
 
+0.04    三  1/19 13:51:57 2011
+        - bzip2 flag
 
 0.03    二  1/18 14:03:51 2011
         - update pods
