--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension App::cpanbaker
 
+0.05    三  1/19 15:16:16 2011
+        - support --installed option.
+        - fix syntax bugs.
+
 0.04    三  1/19 13:51:57 2011
         - bzip2 flag
 
